src/objects/SFHealthTechIssueLogHistory__c.object
<CustomObject>
    <description>Contains the history for SF Health Tech Issue Logs&apos; Issue Summaries</description>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewValue__c</fullName>
        <description>Contains the new value for Issue Summary</description>
        <label>New Value</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OriginalValue__c</fullName>
        <description>Contains the old value for the Issue Summary.</description>
        <label>Original Value</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFHealthTechIssueLog__c</fullName>
        <label>SF Health Tech Issue Log</label>
        <referenceTo>SFHealthTechIssueLog__c</referenceTo>
        <relationshipLabel>SF Health Tech Issue Log History</relationshipLabel>
        <relationshipName>SFHealthTechIssueLogHistory</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SF_Health_Tech_Issue_Log_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SF Health Tech Issue Log History</label>
    <nameField>
        <label>SF Health Tech Issue Log History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SF Health Tech Issue Log History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>